Add Jekyll theme

--- a/_config.yml
+++ b/_config.yml
@@ -5,29 +5,29 @@ url: "http://www.your-domain.com" # the base hostname & protocol for your site
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
-  title: Tyrion Lannister # Your name will go here
-  description: "A personal portfolio and blog website" # used by search engines
+  title: Alfredo Mendoza's Portfolio # Your name will go here
+  description: "Alfredo's Portfolio of Web and Mobile Projects" # used by search engines
 
   # Header and footer text
   header_text: >
-     <h1>Witty & Hilarious Rails Developer</h1>
-     <p>I'm a kickass developer specializing in Rails, AngularJS, and MongoDB.</p>
+     <h1>Hi! My name is Alfredo.</h1>
+     <p>I'm a tech professional with experiences in Web, Mobile Apps, Gaming Industry, and Quality Assurance</p>
   header_text_feature_image:
   footer_text: >
    Powered by <a href="http://jekyllrb.com">Jekyll</a> and made with love.
 
   # Icons
   rss: false
-  email_address: # Full email address, e.g. "sam@example.com"
+  email_address: "almendoza25@gmail.com"
   behance:
   bitbucket:
   dribbble:
   facebook:
   flickr:
-  github: # github profile name, e.g. "madebymunsters"
+  github: "almendoza25"
   google_plus:
   instagram:
-  linkedin:  # Full URL
+  linkedin:  "https://www.linkedin.com/in/alfredomendoza/"
   pinterest:
   reddit:
   soundcloud:
